# hxpr

./: CLAUDE.md  Cargo.toml  README-jp.md  README.md  large_file.rs
.claude/skills/cargo-release/: SKILL.md
.github/ISSUE_TEMPLATE/: bug-report-and-questions.md
.github/workflows/: benchmark.yml  release.yml
benches/: diff_parsing.rs  ui_rendering.rs
benches/common/: mod.rs
crates/tree-sitter-vue3/queries/: injections.scm
dev/bench/: data.js  index.html
examples/language_samples/: Sample.cs  Sample.java  sample.c  sample.cpp  sample.h  sample.mbt  sample.rb  sample.zig
src/: app.rs  cache.rs  config.rs  filter.rs  headless.rs  init.rs  keybinding.rs  language.rs  lib.rs  loader.rs  main.rs  symbol.rs
src/ai/: adapter.rs  mod.rs  orchestrator.rs  prompt_loader.rs  prompts.rs  session.rs
src/ai/adapters/: claude.rs  codex.rs  common.rs  mod.rs
src/ai/defaults/: reviewee.md
src/ai/schemas/: reviewee.json  reviewer.json
src/app/: ai_rally.rs  comments.rs  diff_cache.rs  filter.rs  input.rs  input_diff.rs  input_text.rs  key_sequence.rs  local_mode.rs  mod.rs  polling.rs  pr_list.rs  symbol.rs  tests.rs  types.rs
src/diff/: mod.rs
src/editor/: mod.rs
src/github/: client.rs  comment.rs  mod.rs  pr.rs
src/syntax/: highlighter.rs  injection.rs  mod.rs  parser_pool.rs  themes.rs
src/ui/: ai_rally.rs  comment_list.rs  common.rs  diff_view.rs  file_list.rs  footer.rs  help.rs  mod.rs  pr_list.rs  split_view.rs  text_area.rs
test-samples/: sample.svelte  sample.swift
themes/: Dracula.tmTheme
