[package]
name = "hxpr"
version = "0.1.0"
edition = "2021"
authors = ["ushironoko"]
description = "A TUI tool for GitHub PR review, designed for Helix editor users"
license = "MIT"
repository = "https://github.com/ushironoko/hxpr"

[[bin]]
name = "hxpr"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tempfile = "3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
